<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:layout_margin="30dp">
    <ImageButton
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/icon_exit"
        android:id="@+id/admin_show_user_dialog_exit_btn"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:id="@+id/fffffff">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/user_dialog_title"
            android:textSize="32sp"
            android:textColor="@color/button"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/user_dialog_username"
                android:textSize="18dp"
                android:textStyle="bold"
                android:id="@+id/admin_show_user_dialog_username_t"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="123"
                android:textSize="18dp"
                android:layout_toRightOf="@id/admin_show_user_dialog_username_t"
                android:id="@+id/admin_show_user_dialog_username"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/user_dialog_name"
                android:textSize="18dp"
                android:textStyle="bold"
                android:id="@+id/admin_show_user_dialog_name_t"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="123"
                android:textSize="18dp"
                android:layout_toRightOf="@id/admin_show_user_dialog_name_t"
                android:id="@+id/admin_show_user_dialog_name"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/user_dialog_gender"
                android:textSize="18dp"
                android:textStyle="bold"
                android:id="@+id/admin_show_user_dialog_gender_t"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="123"
                android:textSize="18dp"
                android:layout_toRightOf="@id/admin_show_user_dialog_gender_t"
                android:id="@+id/admin_show_user_dialog_gender"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/user_dialog_birthday"
                android:textSize="18dp"
                android:textStyle="bold"
                android:id="@+id/admin_show_user_dialog_birthday_t"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="123"
                android:textSize="18dp"
                android:layout_toRightOf="@id/admin_show_user_dialog_birthday_t"
                android:id="@+id/admin_show_user_dialog_birthday"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/user_dialog_phone"
                android:textSize="18dp"
                android:textStyle="bold"
                android:id="@+id/admin_show_user_dialog_phone_t"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="123"
                android:textSize="18dp"
                android:layout_toRightOf="@id/admin_show_user_dialog_phone_t"
                android:id="@+id/admin_show_user_dialog_phone"/>
        </RelativeLayout>

    </LinearLayout>



    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="420dp"
        android:id="@+id/admin_show_user_dialog_commit_btn"
        android:text="@string/user_dialog_commit_btn" />

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/admin_show_user_dialog_commit_btn"
        android:layout_marginRight="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="420dp"
        android:id="@+id/admin_show_user_dialog_delete_btn"
        android:text="@string/user_dialog_delete_btn" />

</RelativeLayout>