<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/welcomeBackground">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/logo"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="50dp"
                android:textColor="@color/welcomeMyinfo"
                android:textStyle="bold"
                android:textSize="16sp"
                android:id="@+id/welcome_made_by"
                android:text="@string/made_by"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:textColor="@color/welcomeMyinfo"

                android:textSize="16sp"
                android:id="@+id/welcome_my_info_1"
                android:text="@string/name"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/welcomeMyinfo"
                android:textSize="16sp"
                android:id="@+id/welcome_my_info_2"
                android:paddingTop="10dp"
                android:text="@string/myclass"/>


        </LinearLayout>


    </LinearLayout>


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                android:layout_marginTop="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signin"
                android:textSize="20sp"
                android:background="@color/button"
                android:textColor="#eee"
                android:id="@+id/welcome_login"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                android:layout_marginTop="50dp"
                android:textSize="20sp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_user"
                android:background="@color/button"
                android:textColor="#eee"
                android:id="@+id/welcome_register" />
        </LinearLayout>


    </LinearLayout>
</LinearLayout>